# space-partitioning

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: bench_quadtree.rs
examples/: interval_tree.rs  quadtree.rs  quadtree_noviz.rs
src/: intersections.rs  interval_tree.rs  lib.rs  quadtree.rs  rtree.rs  types.rs
src/intersections/: intersects.rs  intersects_with.rs  ray.rs
src/interval_tree/: inorder_iterator.rs  interval.rs  interval_tree_entry.rs  interval_tree_node.rs  interval_type.rs  node.rs
src/quadtree/: aabb.rs  centered_aabb.rs  error.rs  free_list.rs  node.rs  node_data.rs  node_info.rs  node_list.rs  point.rs  quad_rect.rs  quadrants.rs  quadtree.rs  quadtree_element.rs
src/rtree/: README.md  bounding_box.rs  dimension_type.rs  extent.rs  linear_cost_split.rs  nodes.rs  rtree.rs  splitting_strategies.rs
src/rtree/nodes/: leaf_node.rs  node_traits.rs  non_leaf_node.rs  rtree_leaf.rs  rtree_node.rs
src/rtree/splitting_strategies/: linear_cost_split.rs
