[package]
name = "space-partitioning"
description = "Space partitioning data structures"
version = "0.1.0"
edition = "2018"
keywords = ["space-partitioning", "trees"]
categories = ["computer-vision", "graphics", "game-development"]
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunsided/space-partitioning"

[[example]]
name = "interval_tree"
path = "examples/interval_tree.rs"

[[example]]
name = "quadtree"
path = "examples/quadtree.rs"

[dependencies]
smallvec = { version = "1.6.1", features = ["union", "const_generics"] }

# Build all dependencies (but not this workspace) with optimizations enabled.
[profile.dev.package."*"]
opt-level = 1

[dev-dependencies]
rand = "0.8.3"
piston = "0.53.0"
piston_window = "0.120.0"
