[package]
name = "space-partitioning"
description = "Space partitioning data structures"
version = "0.5.0"
edition = "2021"
keywords = ["space-partitioning", "trees"]
categories = ["computer-vision", "graphics", "game-development"]
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunsided/space-partitioning"

[[example]]
name = "interval_tree"
path = "examples/interval_tree.rs"

[[example]]
name = "quadtree"
path = "examples/quadtree.rs"

[[example]]
name = "quadtree_noviz"
path = "examples/quadtree_noviz.rs"

[[bench]]
name = "bench_quadtree"
harness = false

[dependencies]
smallvec = { version = "1.6.1", features = ["union", "const_generics"] }

# Build all dependencies (but not this workspace) with optimizations enabled.
[profile.dev.package."*"]
opt-level = 1

[dev-dependencies]
rand = "0.8.4"
piston_window = "0.120.0"
criterion = "0.3.4"
indicatif = "0.16.2"
